feat(HOMEWORK) added account processing logic

--- a/piche-banking/src/main/resources/application.yaml
+++ b/piche-banking/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 #spring.application.name=piche-banking
 
-DATASOURCE_USER: test_user
-DATASOURCE_PASSWORD: testpassword
+DATASOURCE_USER: postgres
+DATASOURCE_PASSWORD: postgres
 
 spring:
   application:
