--- a/piche-banking/build.gradle
+++ b/piche-banking/build.gradle
@@ -24,26 +24,45 @@ repositories {
 
 dependencies {
 
+    // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-
 
     // database
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.postgresql:postgresql'
+
+    // Flyway for database migrations
     implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-core:10.4.1'
     implementation 'org.flywaydb:flyway-database-postgresql:10.4.1'
 
+    // Lombok for code generation
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
     testImplementation 'org.testcontainers:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+jacoco {
+    toolVersion = "0.8.11"
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = file("$buildDir/reports/jacoco")
+    }
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.test {
+    finalizedBy jacocoTestReport
 }
