--- a/piche-banking/src/main/resources/application.yaml
+++ b/piche-banking/src/main/resources/application.yaml
@@ -1,23 +1,23 @@
 #spring.application.name=piche-banking
 
-DATASOURCE_USER: postgres
-DATASOURCE_PASSWORD: postgres
-
 spring:
   application:
     name: piche-banking
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/piche_bank
-    username: ${DATASOURCE_USER}
-    password: ${DATASOURCE_PASSWORD}
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:piche_bank;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password: ''
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
   flyway:
-    url: jdbc:postgresql://localhost:5432/piche_bank
-    user: ${DATASOURCE_USER}
-    password: ${DATASOURCE_PASSWORD}
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:h2:mem:piche_bank
+    user: sa
+    password: ''
+    driver-class-name: org.h2.Driver
     locations: classpath:/db/migration
+  h2:
+    console:
+      enabled: true
